--- a/阴影类/em.html
+++ b/阴影类/em.html
@@ -9,6 +9,9 @@
 		em: 当前 fotn-size 大小
 		rem: 根元素 font-size 大小
 
+		font-size 的大小，如果该元素没有设置font-size,那么继承父元素字体大小，如果一直父元素没有设置，那么就是浏览器的font-size
+		
+
 	 -->
 </body>
 </html>
