--- a/4.视觉效果/index.html
+++ b/4.视觉效果/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./单侧投影.css">
     <link rel="stylesheet" href="./双侧投影.css">
+    <link rel="stylesheet" href="./不规则投影.css">
 </head>
 <body>
 <!--
@@ -19,5 +20,7 @@
 <div class="div1"></div>
 <h5>双侧投影</h5>
 <div class="div3"></div>
+<h5>不规则投影</h5>
+<div class="div4"></div>
 </body>
 </html>
